--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <section id="about" class="fade">
     <h2>About the Laboratory</h2>
     <p>
-        The AI Research Laboratory at ESI focuses on developing intelligent systems that improve
-        education, understand human emotions from data, and enhance healthcare decision-making.
-        Our work combines Artificial Intelligence, Machine Learning, and Data Analytics to build
-        impactful real-world solutions.
+        The Laboratory Team (LabTEL) is a research team within the LMCS Laboratory dedicated to the study and development 
+        of advanced e-learning technologies. Its research focuses on learning visualization, artificial intelligence,
+         intelligent systems, and sentiment analytics,
+         with the objective of enhancing the effectiveness and quality of digital learning environments.
     </p>
 </section>
 
@@ -66,12 +66,12 @@
     <div class="members">
 
         <div class="member">
-            <h3><a href="https://example.com/balla-mamar" target="_blank">Balla Mamar</a></h3>
+            <h3><a href="https://example.com/balla-mamar" target="_blank">Amar Balla</a></h3>
             <p>AI Researcher</p>
         </div>
 
         <div class="member">
-            <h3><a href="https://example.com/anbila-bousbia" target="_blank">Anbila Bousbia</a></h3>
+            <h3><a href="https://example.com/anbila-bousbia" target="_blank">Nabila Bousbia</a></h3>
             <p>AI Researcher</p>
         </div>
 
@@ -92,10 +92,24 @@
 
 <section id="contact" class="fade">
     <h2>Contact</h2>
-    <p>For collaborations, internships, or research opportunities:</p>
-    <button onclick="showEmail()">Show Email</button>
-    <p id="email" class="hidden">contact@ai-lab.esi.dz</p>
+    <p>
+        For academic collaborations, internships, or research inquiries, please use the form below.
+    </p>
+
+    <form action="https://formspree.io/f/xxxxx" method="POST">
+        <label for="email">Your Email</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="subject">Subject</label>
+        <input type="text" id="subject" name="subject" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+
+        <button type="submit">Send Message</button>
+    </form>
 </section>
+
 
 <footer>
     <p>© 2026 AI Research Laboratory — ESI Algiers</p>
