--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,12 @@
 </header>
 
 <nav>
-    <a href="index.html">Home</a>
+    <a href="index.html#about">About</a>
+    <a href="index.html#research">Research</a>
+    <a href="projects.html">Projects</a>
     <a href="publications.html">Publications</a>
+    <a href="index.html#members">Members</a>
+    <a href="index.html#contact">Contact</a>
 </nav>
 
 <section class="fade">
