--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 </header>
 
-<nav>
+<nav aria-label="Main navigation"> 
     <a href="index.html#about">About</a>
     <a href="index.html#research">Research</a>
     <a href="projects.html">Projects</a>
