--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AI Research Laboratory | E-Learning, Sentiment Analytics & Healthcare AI</title>
+    <title>EIAH Research Team | LMCS Laboratory – ESI Algiers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,108 +11,187 @@
 
 <header>
     <div class="header-content">
-        <img src="logo.png" alt="Lab Logo" class="logo">
+        <img src="logo.png" alt="EIAH Logo" class="logo">
         <div>
-            <h1>Artificial Intelligence Research Laboratory</h1>
-            <p>E-Learning • Sentiment Analytics • Healthcare AI</p>
+            <h1>EIAH Research Team</h1>
+            <p>Environnement Informatique pour l’Apprentissage Humain</p>
+            <p>
+                A research team within the 
+                <strong>LMCS Laboratory</strong><br>
+                École nationale Supérieure d’Informatique (ESI), Algiers
+            </p>
             <a href="http://esi.dz/" target="_blank" class="esi-link">
-                Hosted at ESI – École nationale Supérieure d’Informatique
+                Official Website of ESI
             </a>
         </div>
     </div>
 </header>
 
 <nav aria-label="Main navigation"> 
-    <a href="index.html#about">About</a>
-    <a href="index.html#research">Research</a>
-    <a href="projects.html">Projects</a>
-    <a href="publications.html">Publications</a>
-    <a href="index.html#members">Members</a>
-    <a href="index.html#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="#lmcs">LMCS Laboratory</a>
+    <a href="#research">Research</a>
+    <a href="#members">Members</a>
+    <a href="#contact">Contact</a>
 </nav>
 
+<!-- EIAH SECTION -->
+
 <section id="about" class="fade">
-    <h2>About the Laboratory</h2>
+    <h2>About the EIAH Team</h2>
     <p>
-        The Laboratory Team (LabTEL) is a research team within the LMCS Laboratory dedicated to the study and development 
-        of advanced e-learning technologies. Its research focuses on learning visualization, artificial intelligence,
-         intelligent systems, and sentiment analytics,
-         with the objective of enhancing the effectiveness and quality of digital learning environments.
+        The <strong>EIAH Research Team</strong> (Environnement Informatique pour l’Apprentissage Humain – 
+        Computer-Based Learning Environments for Human Learning) is a research team within the 
+        <strong>LMCS Laboratory</strong> at the École nationale Supérieure d’Informatique (ESI), Algiers.
+    </p>
+
+    <p>
+        The team conducts research structured around three main axes:
+    </p>
+
+    <ul>
+        <li>
+            <strong>Design of Educational Resources:</strong> Supporting teachers in instructional design 
+            and pedagogical content creation using authoring tools, development of language courses, 
+            serious games, and research on assessment methodologies.
+        </li>
+        <li>
+            <strong>Tutoring and Learner Monitoring:</strong> Personalization and adaptation of learning 
+            environments, learning trace analysis, learner annotations, and intelligent tutoring systems.
+        </li>
+        <li>
+            <strong>Tools and Models for EIAH:</strong> Learner modeling, pedagogical ontologies, semantic 
+            representation of educational knowledge, and integration of web services in EIAH systems.
+        </li>
+    </ul>
+
+    <p>
+        The EIAH team is multidisciplinary, bringing together researchers in computer science, 
+        electronics, mathematics, and English. Research topics reflect both current scientific 
+        challenges in EIAH and the specific needs of ESI.
     </p>
 </section>
 
+<!-- LMCS SECTION -->
+
+<section id="lmcs" class="fade">
+    <h2>LMCS Laboratory</h2>
+    <p>
+        The <strong>LMCS Laboratory</strong> (Laboratory of Methods for Systems Design) was established 
+        in 1999 and is affiliated with the École nationale Supérieure d’Informatique (ESI), Algiers.
+    </p>
+
+    <p>
+        LMCS research activities are organized around:
+    </p>
+
+    <ul>
+        <li>
+            <strong>Methods:</strong> Optimization, Knowledge Representation, Classification, Robustness, 
+            and related formal and computational approaches.
+        </li>
+        <li>
+            <strong>Systems Design:</strong> Information Systems, Embedded Systems, Hypermedia Systems, 
+            Communicating Systems, and Recognition Systems.
+        </li>
+    </ul>
+
+    <p>
+        The EIAH team contributes to LMCS research through the design and development 
+        of intelligent and adaptive learning systems.
+    </p>
+</section>
+
+<!-- RESEARCH -->
+
 <section id="research" class="fade">
     <h2>Research Areas</h2>
+
     <div class="cards">
+
         <div class="card">
-            <h3>E-Learning Intelligence</h3>
-            <p>Adaptive platforms, intelligent tutoring, learning analytics, and student modeling.</p>
+            <h3>Educational Content Engineering</h3>
+            <p>
+                Instructional design support, authoring tools, serious games, 
+                language learning systems, and digital assessment technologies.
+            </p>
         </div>
 
         <div class="card">
-            <h3>Sentiment Analytics</h3>
-            <p>NLP, opinion mining, emotion detection, and social media analysis.</p>
+            <h3>Adaptive & Intelligent Learning Systems</h3>
+            <p>
+                Personalization, learner tracking, trace analysis, 
+                intelligent tutoring systems, and adaptive EIAH platforms.
+            </p>
         </div>
 
         <div class="card">
-            <h3>Healthcare AI</h3>
-            <p>Medical prediction, diagnostic support, and patient data intelligence.</p>
+            <h3>Modeling & Semantic Technologies</h3>
+            <p>
+                Learner modeling, pedagogical ontologies, knowledge representation, 
+                and web-based services for educational environments.
+            </p>
         </div>
+
     </div>
 </section>
 
+<!-- MEMBERS -->
+
 <section id="members" class="fade">
-    <h2>Laboratory Members</h2>
+    <h2>Research Team Members</h2>
     <div class="members">
 
         <div class="member">
-            <h3><a href="https://example.com/balla-mamar" target="_blank">Amar Balla</a></h3>
-            <p>AI Researcher</p>
+            <h3>
+                <a href="https://talents.esi.dz/scolar/enseignant_detail/21/" target="_blank">
+                    Mr. BALLA Amar
+                </a>
+            </h3>
         </div>
 
         <div class="member">
-            <h3><a href="https://example.com/anbila-bousbia" target="_blank">Nabila Bousbia</a></h3>
-            <p>AI Researcher</p>
+            <h3>Mrs. BOUSBIA Nabila</h3>
         </div>
 
-        <!-- Add more members here -->
+        <div class="member">
+            <h3>
+                <a href="https://talents.esi.dz/scolar/enseignant_detail/20/" target="_blank">
+                    Mr. AZOUAOU Faïçal
+                </a>
+            </h3>
+        </div>
+
+        <div class="member">
+            <h3>Mr. AMROUCHE Hakim</h3>
+        </div>
+
+        <div class="member">
+            <h3>Mrs. FADLOUN Samiha</h3>
+        </div>
+
+        <div class="member">
+            <h3>Mrs. ARTABAZ Saliha</h3>
+        </div>
+
+        <div class="member">
+            <h3>Mr. DELLYIS Hachemi</h3>
+        </div>
 
     </div>
 </section>
 
-<section id="projects" class="fade">
-    <h2>Ongoing Projects</h2>
-    <ul>
-        <li>Emotion-aware E-learning platforms</li>
-        <li>Arabic sentiment analysis models</li>
-        <li>AI-assisted healthcare diagnosis</li>
-        <li>Learning analytics dashboards</li>
-    </ul>
-</section>
+<!-- CONTACT -->
 
 <section id="contact" class="fade">
     <h2>Contact</h2>
     <p>
-        For academic collaborations, internships, or research inquiries, please use the form below.
+        For academic collaborations, internships, or research inquiries, please contact the EIAH team through ESI.
     </p>
-
-    <form action="https://formspree.io/f/xxxxx" method="POST">
-        <label for="email">Your Email</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="subject">Subject</label>
-        <input type="text" id="subject" name="subject" required>
-
-        <label for="message">Message</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
-
-        <button type="submit">Send Message</button>
-    </form>
 </section>
 
-
 <footer>
-    <p>© 2026 AI Research Laboratory — ESI Algiers</p>
+    <p>© 2026 EIAH Research Team — LMCS Laboratory — ESI Algiers</p>
 </footer>
 
 <script src="script.js"></script>
