change team name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>EIAH Research Team | LMCS Laboratory – ESI Algiers</title>
+    <title>TEL Research Team | LMCS Laboratory – ESI Algiers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,18 +11,19 @@
 
 <header>
     <div class="header-content">
-        <img src="logo.png" alt="EIAH Logo" class="logo">
+        <img src="logo.png" alt="TEL Logo" class="logo">
         <div>
-            <h1>EIAH Research Team</h1>
-            <p>Environnement Informatique pour l’Apprentissage Humain</p>
+            <h1>TEL Research Team</h1>
+            <p>Technology Enhanced Learning</p>
             <p>
                 A research team within the 
-                <strong>LMCS Laboratory</strong><br>
-                École nationale Supérieure d’Informatique (ESI), Algiers
+                <a href="https://lmcs.esi.dz/laboratoire/presentation/" target="_blank">
+                    <strong>LMCS Laboratory</strong>
+                </a><br>
+                <a href="https://esi.dz" target="_blank">
+                    École nationale Supérieure d’Informatique (ESI), Algiers
+                </a>
             </p>
-            <a href="http://esi.dz/" target="_blank" class="esi-link">
-                Official Website of ESI
-            </a>
         </div>
     </div>
 </header>
@@ -35,70 +36,84 @@
     <a href="#contact">Contact</a>
 </nav>
 
-<!-- EIAH SECTION -->
+<!-- ABOUT TEL -->
 
 <section id="about" class="fade">
-    <h2>About the EIAH Team</h2>
+    <h2>About the TEL Team</h2>
     <p>
-        The <strong>EIAH Research Team</strong> (Environnement Informatique pour l’Apprentissage Humain – 
-        Computer-Based Learning Environments for Human Learning) is a research team within the 
-        <strong>LMCS Laboratory</strong> at the École nationale Supérieure d’Informatique (ESI), Algiers.
+        The <strong>TEL Research Team (Technology Enhanced Learning)</strong> is a research team 
+        within the 
+        <a href="https://lmcs.esi.dz/laboratoire/presentation/" target="_blank">
+            LMCS Laboratory
+        </a> at the 
+        <a href="https://esi.dz" target="_blank">
+            École nationale Supérieure d’Informatique (ESI), Algiers
+        </a>.
     </p>
 
     <p>
-        The team conducts research structured around three main axes:
+        The team conducts research in the field of 
+        <strong>EIAH (Environnement Informatique pour l’Apprentissage Humain)</strong> — 
+        Computer-Based Learning Environments — structured around three main research axes:
     </p>
 
     <ul>
         <li>
-            <strong>Design of Educational Resources:</strong> Supporting teachers in instructional design 
-            and pedagogical content creation using authoring tools, development of language courses, 
-            serious games, and research on assessment methodologies.
+            <strong>Educational Content Design:</strong> Assisting teachers in instructional 
+            design and pedagogical content creation using authoring tools, developing 
+            language courses, serious games, and addressing digital assessment challenges.
         </li>
         <li>
-            <strong>Tutoring and Learner Monitoring:</strong> Personalization and adaptation of learning 
-            environments, learning trace analysis, learner annotations, and intelligent tutoring systems.
+            <strong>Tutoring & Learner Monitoring:</strong> Personalization and adaptation 
+            of learning environments, learner trace analysis, annotations, and intelligent 
+            tutoring systems.
         </li>
         <li>
-            <strong>Tools and Models for EIAH:</strong> Learner modeling, pedagogical ontologies, semantic 
-            representation of educational knowledge, and integration of web services in EIAH systems.
+            <strong>Models & Tools for EIAH:</strong> Learner modeling, pedagogical ontologies, 
+            semantic knowledge representation, and web services integration within 
+            learning environments.
         </li>
     </ul>
 
     <p>
-        The EIAH team is multidisciplinary, bringing together researchers in computer science, 
-        electronics, mathematics, and English. Research topics reflect both current scientific 
-        challenges in EIAH and the specific needs of ESI.
+        The TEL team is multidisciplinary, including researchers in computer science, 
+        electronics, mathematics, and English. Research themes reflect both current 
+        scientific challenges in Technology Enhanced Learning and the specific needs of ESI.
     </p>
 </section>
 
-<!-- LMCS SECTION -->
+<!-- LMCS -->
 
 <section id="lmcs" class="fade">
     <h2>LMCS Laboratory</h2>
     <p>
-        The <strong>LMCS Laboratory</strong> (Laboratory of Methods for Systems Design) was established 
-        in 1999 and is affiliated with the École nationale Supérieure d’Informatique (ESI), Algiers.
+        The <strong>LMCS Laboratory</strong> (Laboratory of Methods for Systems Design), 
+        established in 1999, is affiliated with the 
+        <a href="https://esi.dz" target="_blank">
+            École nationale Supérieure d’Informatique (ESI), Algiers
+        </a>.
     </p>
 
     <p>
-        LMCS research activities are organized around:
+        LMCS research is structured around:
     </p>
 
     <ul>
         <li>
-            <strong>Methods:</strong> Optimization, Knowledge Representation, Classification, Robustness, 
-            and related formal and computational approaches.
+            <strong>Methods:</strong> Optimization, Knowledge Representation, Classification, 
+            Robustness, and formal computational approaches.
         </li>
         <li>
-            <strong>Systems Design:</strong> Information Systems, Embedded Systems, Hypermedia Systems, 
-            Communicating Systems, and Recognition Systems.
+            <strong>Systems Design:</strong> Information Systems, Embedded Systems, 
+            Hypermedia Systems, Communicating Systems, and Recognition Systems.
         </li>
     </ul>
 
     <p>
-        The EIAH team contributes to LMCS research through the design and development 
-        of intelligent and adaptive learning systems.
+        Official LMCS page: 
+        <a href="https://lmcs.esi.dz/laboratoire/presentation/" target="_blank">
+            https://lmcs.esi.dz/laboratoire/presentation/
+        </a>
     </p>
 </section>
 
@@ -110,26 +125,26 @@
     <div class="cards">
 
         <div class="card">
-            <h3>Educational Content Engineering</h3>
+            <h3>Instructional Engineering</h3>
             <p>
-                Instructional design support, authoring tools, serious games, 
-                language learning systems, and digital assessment technologies.
+                Authoring tools, serious games, language learning systems, 
+                and digital assessment technologies.
             </p>
         </div>
 
         <div class="card">
-            <h3>Adaptive & Intelligent Learning Systems</h3>
+            <h3>Adaptive Learning Systems</h3>
             <p>
-                Personalization, learner tracking, trace analysis, 
-                intelligent tutoring systems, and adaptive EIAH platforms.
+                Personalization, learner analytics, trace analysis, 
+                and intelligent tutoring systems.
             </p>
         </div>
 
         <div class="card">
-            <h3>Modeling & Semantic Technologies</h3>
+            <h3>Knowledge & Learner Modeling</h3>
             <p>
-                Learner modeling, pedagogical ontologies, knowledge representation, 
-                and web-based services for educational environments.
+                Ontologies, semantic technologies, learner models, 
+                and web-based educational services.
             </p>
         </div>
 
@@ -186,12 +201,29 @@
 <section id="contact" class="fade">
     <h2>Contact</h2>
     <p>
-        For academic collaborations, internships, or research inquiries, please contact the EIAH team through ESI.
+        For academic collaborations, internships, or research inquiries, please use the form below.
     </p>
+
+    <form action="https://formspree.io/f/xxxxx" method="POST">
+        <label for="email">Your Email</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="subject">Subject</label>
+        <input type="text" id="subject" name="subject" required>
+
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="5" required></textarea>
+
+        <button type="submit">Send Message</button>
+    </form>
 </section>
 
 <footer>
-    <p>© 2026 EIAH Research Team — LMCS Laboratory — ESI Algiers</p>
+    <p>
+        © 2026 TEL Research Team — 
+        <a href="https://lmcs.esi.dz/laboratoire/presentation/" target="_blank">LMCS Laboratory</a> — 
+        <a href="https://esi.dz" target="_blank">ESI Algiers</a>
+    </p>
 </footer>
 
 <script src="script.js"></script>
