--- a/index.html
+++ b/index.html
@@ -41,14 +41,18 @@
 <section id="about" class="fade">
     <h2>About the TEL Team</h2>
     <p>
-        The <strong>TEL Research Team (Technology Enhanced Learning)</strong> is a research team 
-        within the 
-        <a href="https://lmcs.esi.dz/laboratoire/presentation/" target="_blank">
-            LMCS Laboratory
-        </a> at the 
-        <a href="https://esi.dz" target="_blank">
-            École nationale Supérieure d’Informatique (ESI), Algiers
-        </a>.
+        The <strong>TEL Research Team (Technology Enhanced Learning)</strong>
+        
+    <p style="color: white;">
+    A research team within the 
+    <a href="https://lmcs.esi.dz/laboratoire/presentation/" target="_blank" style="color: white;">
+        <strong>LMCS Laboratory</strong>
+    </a><br>
+    <a href="https://esi.dz" target="_blank" style="color: white;">
+        École nationale Supérieure d’Informatique (ESI), Algiers
+    </a>
+</p>
+
     </p>
 
     <p>
@@ -257,4 +261,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
