--- a/index.html
+++ b/index.html
@@ -43,15 +43,13 @@
     <p>
         The <strong>TEL Research Team (Technology Enhanced Learning)</strong>
         
-    <p style="color: white;">
     A research team within the 
     <a href="https://lmcs.esi.dz/laboratoire/presentation/" target="_blank" style="color: white;">
-        <strong>LMCS Laboratory</strong>
+        <strong style="color: white;" >LMCS Laboratory</strong>
     </a><br>
     <a href="https://esi.dz" target="_blank" style="color: white;">
         École nationale Supérieure d’Informatique (ESI), Algiers
     </a>
-</p>
 
     </p>
 
@@ -261,6 +259,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
