--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
         For academic collaborations, internships, or research inquiries, please use the form below.
     </p>
 
-    <div style="display: flex; flex-wrap: wrap; gap: 40px; align-items: flex-start;">
+    <div class="contact-container">
 
         <!-- Contact Form -->
-        <div style="flex: 1; min-width: 300px;">
+        <div class="contact-form">
             <form action="https://formspree.io/f/xxxxx" method="POST">
                 <label for="email">Your Email</label>
                 <input type="email" id="email" name="email" required>
@@ -255,20 +255,18 @@
         </div>
 
         <!-- Map -->
-        <div style="flex: 1; min-width: 300px;">
+        <div class="contact-map">
             <h3>ESI Location</h3>
             <iframe 
                 src="https://www.google.com/maps?q=École%20nationale%20Supérieure%20d’Informatique%20Alger&output=embed"
-                width="100%" 
-                height="350" 
-                style="border:0;" 
-                allowfullscreen="" 
+                allowfullscreen
                 loading="lazy">
             </iframe>
         </div>
 
     </div>
 </section>
+
 
 <footer>
     <p>
@@ -281,6 +279,7 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
