--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>TEL Research Team | LMCS Laboratory – ESI Algiers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -172,3 +172,4 @@
 </script>
 </body>
 </html>
+
