--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
 <header>
     <div class="header-content">
-        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect width='100' height='100' fill='%233f8ab3' rx='20'/%3E%3Ctext x='18' y='68' font-size='54' fill='white' font-family='Arial'%3ETEL%3C/text%3E%3C/svg%3E" alt="TEL Logo" class="logo">
+        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 240 80'%3E%3Cdefs%3E%3ClinearGradient id='researchGrad' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%230f2e4a; stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%231a4972; stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Crect width='240' height='80' fill='url(%23researchGrad)' rx='16' ry='16'/%3E%3Ccircle cx='200' cy='30' r='4' fill='%234fa3e0' opacity='0.6' /%3E%3Ccircle cx='215' cy='50' r='4' fill='%234fa3e0' opacity='0.6' /%3E%3Ccircle cx='185' cy='55' r='4' fill='%234fa3e0' opacity='0.6' /%3E%3Cline x1='200' y1='30' x2='215' y2='50' stroke='%23e0f0ff' stroke-width='1' opacity='0.4' /%3E%3Cline x1='200' y1='30' x2='185' y2='55' stroke='%23e0f0ff' stroke-width='1' opacity='0.4' /%3E%3Cline x1='215' y1='50' x2='185' y2='55' stroke='%23e0f0ff' stroke-width='1' opacity='0.4' /%3E%3Ctext x='20' y='42' font-family='Segoe UI, Helvetica, sans-serif' font-size='32' font-weight='700' fill='white' letter-spacing='1'%3ETEL%3C/text%3E%3Ctext x='20' y='62' font-family='Segoe UI, Arial, sans-serif' font-size='14' font-weight='600' fill='%234fa3e0' letter-spacing='0.5'%3ERESEARCH TEAM%3C/text%3E%3Crect x='90' y='28' width='1' height='18' fill='white' opacity='0.3' /%3E%3Ctext x='100' y='40' font-family='Segoe UI, Arial, sans-serif' font-size='8' font-weight='300' fill='%23e0f0ff'%3ETECHNOLOGY%3C/text%3E%3Ctext x='100' y='50' font-family='Segoe UI, Arial, sans-serif' font-size='8' font-weight='300' fill='%23e0f0ff'%3EENHANCED LEARNING%3C/text%3E%3C/svg%3E" alt="TEL Research Team Logo" class="logo">
+        
         <div>
             <h1>TEL Research Team</h1>
             <p>Technology Enhanced Learning</p>
@@ -22,6 +23,7 @@
         </div>
     </div>
 </header>
+
 
 <nav aria-label="Main navigation"> 
     <a href="#about">About</a>
@@ -89,14 +91,14 @@
     <h2>Research Team Members</h2>
     <!-- chef / leader: Nabila Bousbia (prominent) -->
     <div style="margin-bottom: 2rem; background: #e8f0fe; padding: 1rem 2rem; border-radius: 60px; display: inline-block; font-weight: 600; color: #002856; border: 1px solid #aac3dc;">
-        👩‍🏫 Team leader: <strong>Pr. Nabila BOUSBIA</strong>
+        Team leader: <strong>Dr. Nabila BOUSBIA</strong>
     </div>
     
     <div class="members">
         <!-- WOMEN (no ia/vis tags) -->
         <div class="member">
             <h3><a href="https://scholar.google.com/citations?user=_u5IOC4AAAAJ&hl=fr" target="_blank">Mrs. BOUSBIA Nabila</a></h3>
-            <div><span class="role-tag">Team leader & professor</span></div>
+            <div><span class="role-tag">Team leader</span></div>
             <!-- no domain badges -->
         </div>
         <div class="member">
@@ -172,4 +174,5 @@
 </script>
 </body>
 </html>
+
 
