Revise index.html with new research areas and members
Updated the TEL Research Team webpage to include new research areas and team member details.

--- a/index.html
+++ b/index.html
@@ -41,19 +41,18 @@
         <a href="https://esi.dz" target="_blank" style="color: #004b9a;">École nationale Supérieure d’Informatique (ESI), Algiers</a>
     </p>
     <p>
-        The team conducts research in the field of 
-        <strong>computer-based learning environments</strong> — 
-        structured around three main research axes:
+        The team conducts research in the field of <strong>Technology Enhanced Learning</strong>, structured around <strong>TEL various research axes</strong>:
     </p>
     <ul>
-        <li><strong>Educational Content Design:</strong> Assisting teachers in instructional design and pedagogical content creation using authoring tools, developing language courses, serious games, and addressing digital assessment challenges.</li>
-        <li><strong>Tutoring & Learner Monitoring:</strong> Personalization and adaptation of learning environments, learner trace analysis, annotations, and intelligent tutoring systems.</li>
-        <li><strong>Models & Tools for Learning:</strong> Learner modeling, pedagogical ontologies, semantic knowledge representation, and web services integration within learning environments.</li>
+        <li><strong>Educational Content Design:</strong> Assisting teachers in instructional design and pedagogical content creation using authoring tools, serious games, and digital assessment challenges.</li>
+        <li><strong>Tutoring & Learner Monitoring:</strong> Personalization and adaptation of learning environments, learner trace analysis, and intelligent tutoring systems.</li>
+        <li><strong>Models & Tools for Learning:</strong> Learner modeling, pedagogical ontologies, semantic knowledge representation, and web services integration.</li>
+        <li><strong>Artificial Intelligence (AI):</strong> Leveraging machine learning, predictive modeling, and natural language processing to create smarter, proactive educational systems and automated decision support.</li>
+        <li><strong>Information Visualization & Visual Analytics:</strong> Designing interactive dashboards and visual mining tools to transform complex educational data and learner traces into actionable insights.</li>
     </ul>
     <p>
         The TEL team is multidisciplinary, including researchers in computer science, electronics, mathematics, and English. Research themes reflect both current scientific challenges in Technology Enhanced Learning and the specific needs of ESI.
     </p>
-    <!-- No occurrence of EIAH anywhere -->
 </section>
 
 <section id="lmcs">
@@ -174,5 +173,6 @@
 </script>
 </body>
 </html>
+
 
 
