--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <h3><a href="https://scholar.google.com/citations?user=y5DKQy4AAAAJ&hl=ar" target="_blank">Mr. AMROUCHE Hakim</a></h3>
         </div>
         <div class="member">
-            <h3><a href="https://talents.esi.dz/scolar/enseignant_detail/65/" target="_blank">Mr. DELLYIS Hachemi</a></h3>
+            <h3><a href="https://talents.esi.dz/scolar/enseignant_detail/65/" target="_blank">Mr. DELLYS Hachemi</a></h3>
         </div>
         <div class="member">
             <h3><a href="https://www.researchgate.net/profile/Boukhadra-Adel" target="_blank">Mr. BOUKHADRA Adel</a></h3>
@@ -173,6 +173,7 @@
 </script>
 </body>
 </html>
+
 
 
 
