Revise index.html with new content and structure
Updated the index.html file to include new research areas, updated team member information, and improved the overall structure.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>
                 A research team within the 
                 <strong>LMCS Laboratory</strong><br>
-                École nationale Supérieure d’Informatique (ESI), Algiers
+                École nationale supérieure d’Informatique (ESI), Algiers
             </p>
         </div>
     </div>
@@ -74,7 +74,7 @@
         <div class="card"><h3>Knowledge & Learner Modeling</h3><p>Ontologies, semantic technologies, learner models, and web-based educational services.</p></div>
         
         <!-- NEW: IA (Artificial Intelligence in Education) -->
-        <div class="card"><h3>Artificial Intelligence (IA) </h3><p>Machine learning, predictive modeling, and intelligent decision support for personalised learning pathways and data analysis.</p></div>
+        <div class="card"><h3>Artificial Intelligence (AI) </h3><p>Machine learning, predictive modeling, and intelligent decision support for personalised learning pathways and data analysis.</p></div>
         
         <!-- NEW: Visualization & Visual Analytics (combined as requested) -->
         <div class="card"><h3>Visualization & Visual Analytics</h3><p>Interactive dashboards, educational data visualization, visual mining of learner traces, and explainable AI interfaces.</p></div>
@@ -173,6 +173,7 @@
 </script>
 </body>
 </html>
+
 
 
 
