--- a/index.html
+++ b/index.html
@@ -135,27 +135,32 @@
     <p>For academic collaborations, internships, or research inquiries, please use the form below.</p>
     <div class="contact-flex">
         <div class="contact-form">
-            <form action="#" method="POST">
+            <form id="contactForm" action="#" method="POST">
                 <label for="email">Your Email</label>
                 <input type="email" id="email" name="email" required>
+
                 <label for="subject">Subject</label>
                 <input type="text" id="subject" name="subject" required>
+
                 <label for="message">Message</label>
                 <textarea id="message" name="message" rows="4" required></textarea>
+
                 <button type="submit">Send Message</button>
             </form>
         </div>
+
         <div class="map-box">
             <h3>ESI Location</h3>
             <iframe 
                 src="https://www.google.com/maps?q=École%20nationale%20Supérieure%20d’Informatique%20Alger&output=embed"
                 style="border:0;" 
-                allowfullscreen="" 
+                allowfullscreen 
                 loading="lazy">
             </iframe>
         </div>
     </div>
 </section>
+
 
 <footer>
     <p>© 2026 TEL Research Team — <a href="https://lmcs.esi.dz/laboratoire/presentation/" target="_blank">LMCS Laboratory</a> — <a href="https://esi.dz" target="_blank">ESI Algiers</a></p>
@@ -173,6 +178,7 @@
 </script>
 </body>
 </html>
+
 
 
 
